--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -73,6 +73,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-size: 1.1em;
+  padding: 0 .75em;
 }
 
 body {
@@ -95,6 +97,31 @@ a {
 
 
 .container {
-  max-width: 1366px;
+  max-width: 1100px;
   margin: auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 1em 0em;
+}
+
+h1,
+h2 {
+  text-align: center;
+}
+
+ol {
+  padding: 0 1em;
+}
+
+ol li::marker {
+  font-weight: bold;
+}
+
+li:not(:last-child) {
+  margin-bottom: .5em;
 }
