--- a/src/app/style/globals.scss
+++ b/src/app/style/globals.scss
@@ -116,10 +116,10 @@ h2 {
 
 ol {
   padding: 0 1em;
-}
 
-ol li::marker {
-  font-weight: bold;
+  & li::marker {
+    font-weight: bold;
+  }
 }
 
 li:not(:last-child) {
@@ -131,8 +131,8 @@ li:not(:last-child) {
   max-width: max(75%, calc(var(--max-width)/2));
   margin: auto;
   margin-top: 4em;
-}
 
-.final-note>* {
-  font-size: .75em;
+  &>* {
+    font-size: .75em;
+  }
 }
